Updated governing equations document

--- a/documentation/governingEquations/governingEquations.tex
+++ b/documentation/governingEquations/governingEquations.tex
@@ -1,5 +1,10 @@
 \documentclass{article}
 
+% Page Formatting
+\usepackage[letterpaper, margin=1in]{geometry}
+% General Packages
+\usepackage{multicol}
+
 % Mathematics
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -10,15 +15,95 @@
 \newcommand{\laplacian}[1]{\ensuremath{\nabla^{2} #1}}
 \renewcommand{\d}{\mathrm{d}}
 
+% Graphics Handling
+\usepackage{graphicx}
+\graphicspath{{./figures/}}
+\usepackage{pgf}
+\newcommand{\includepgf}[2]{\resizebox{#1}{!}{\input{#2}}}
+
+
 % Document Information
 \title{pyroFoam Governing Equations Derivations}
 
 \begin{document}
+  \section{Governing Equations}
+    The governing equations for the gas and solid portion of a given cell are derived in the following section.
+    Figure \ref{fig:VOF} shows a representative cell within the domain that contains a volume fraction of solid and gas denoted by $\alpha_s$ and $\alpha_g$ respectively.
+    Each cell face is also assigned a solid and gas face fraction ($\alpha_f$) based on the amount of face area that is covered by the solid and gas.
+    Finally, the interface area ($A_i$) represents the boundary between the solid and gas domains within the cell.
+    The decomposition of each cell and determination of the volume fractions, face fractions, and interface area will be covered in Section \ref{sec:decomp}.
+
+    \begin{figure}
+      \centering
+      \label{fig:VOF}
+      \def\svgwidth{0.5\textwidth}
+      \input{./figures/VOF.pdf_tex}
+      \caption{Diagram of Interface Cell}
+    \end{figure}
+
+    \subsection{Solid Phase}
+      The mass continuity equation for the shaded solid control volume is
+      \begin{equation*}
+          \frac{\partial}{\partial t}\int_{V_s} \rho_s \d V_s
+        + \int_{A_s} \rho_s (\vec{u}_{rel} \cdot \vec{n}) \d A_s
+        = 0.
+      \end{equation*}
+      Discretizing the solid continuity equation using a first-order approximation in time and a second-order approximation for the surface integral, the equation is written as
+      \begin{equation*}
+          \frac{\rho_s V_s - \rho_s^0 V_s^0}{\Delta t}
+        + \sum_{f,s}\rho_s(\vec{u}_{rel}\cdot\vec{A}_{f,s})
+        = 0.
+      \end{equation*}
+      Assuming that the solid is incompressible, the surface is regressing at a constant rate ($\dot{r}$), and the solid phase is stationary, the continuity equation becomes
+      \begin{equation*}
+          \frac{V_s - V_s^0}{\Delta t}
+        = -\frac{\dot{m}'' A_i}{\rho_s},
+      \end{equation*}
+      where $\dot{m}'' = \rho_s \dot{r}$.
+      Furthermore, transferring the equation from the solid control volume to the cell control volume using the volume and area fractions, the final form of the solid continuity equation is
+      \begin{equation}
+        \label{eq:solidContinuity}
+          \frac{\alpha_s - \alpha_s^0}{\Delta t}
+        = -\frac{\dot{m}'' A_i}{\rho_s V_c}.
+      \end{equation}
+
+      Similarly, the energy equation for the shaded solid control volume is
+      \begin{equation*}
+          \frac{\partial}{\partial t} \int_{V_s} \rho_s c_s T_s \d V_s
+        + \int_{A_s} c_s T_s (\rho_s \vec{u}_{rel} \cdot \vec{n}) \d A_s
+        - \int_{A_s} \rho_s c_s (\nabla T_s \cdot \vec{n}) \d A_s
+        = \int_{V_s} S_{T_s} \d V_s,
+      \end{equation*}
+      where $S_{T_s}$ is any volumetric source within the solid domain. Discretizing the solid energy equation and assuming constant thermophysical properties within the solid yields
+      \begin{equation*}
+          \rho_s c_s \frac{T_s V_s - T_s^0 V_s^0}{\Delta t}
+        - \sum_{f} \rho_s c_s (\nabla T_s \cdot \vec{A}_{f,s})
+        = S_{T_s} V_s - \dot{m}'' c_s (T_i - T_{ref}) A_i,
+      \end{equation*}
+      where $T_i$ is the temperature of the solid at the interface and $T_{ref}$ is a combustion reference temperature.
+      Finally, transferring the equation from the solid volume to the entire cell volume shows that
+      \begin{equation*}
+          \rho_s c_s \frac{T_s \alpha_s - T_s^0 \alpha_s^0}{\Delta t}
+        - \frac{1}{V_c}\sum_{f,s} \rho_s c_s (\nabla T_s \cdot \vec{A}_{f}\alpha_{f,s})
+        = S_{T_s} \alpha_s - \frac{\dot{m}'' c_s (T_i - T_{ref}) A_i}{V_c}.
+      \end{equation*}
+      Using \eqref{eq:solidContinuity} in conjunction with
+      \begin{equation*}
+          \frac{T_s \alpha_s - T_s^0 \alpha_s^0}{\Delta t}
+        = \alpha_s \frac{T_s - T_s^0}{\Delta t} + T_s^0 \frac{\alpha_s - \alpha_s^0}{\Delta t},
+      \end{equation*}
+      the final form of the solid energy equation is obtained as
+      \begin{equation}
+          \rho_s c_s \alpha_s \frac{T_s - T_s^0}{\Delta t}
+        - \frac{1}{V_c}\sum_{f,s} \rho_s c_s (\nabla T_s \cdot \vec{A}_{f}\alpha_{f,s})
+        = S_{T_s} \alpha_s - \frac{\dot{m}'' c_s (T_i - T_s^0) A_i}{V_c}.
+      \end{equation}
+
   \section{Gas Continuity Equation}
     Mass continuity on gray (gas) control volume (Vg) surround by boundary Ag
     \begin{equation*}
-        \frac{\partial}{\partial t}\int_{V_g} \rho \d V 
-      + \int_{A_g} \rho (\vec{u} \cdot \vec{n}) \d A
+        \frac{\partial}{\partial t}\int_{V_g} \rho \d V_g 
+      + \int_{A_g} \rho (\vec{u} \cdot \vec{n}) \d A_g
       = 0
     \end{equation*}
     Using second-order approximations of the integrals and a first-order time derivative
@@ -31,7 +116,7 @@
     \begin{equation*}
         V_c\frac{\rho \alpha_g - \rho^0 \alpha_g^0}{\Delta t}
       + \sum_{f}\rho(\vec{u}\cdot\vec{A_{f}})\alpha_f
-      = \dot{m}'' A_b
+      = \dot{m}'' A_i
     \end{equation*}
     Divide by cell volume, $V_c$, to give the equation in OpenFOAM form that we want to solve
     \begin{equation}
@@ -39,32 +124,32 @@
       \boxed{
         \frac{\rho \alpha_g - \rho^0 \alpha_g^0}{\Delta t}
       + \frac{1}{V_c}\sum_{f}\rho (\vec{u}\cdot\vec{A_{f}})\alpha_f
-      = \frac{\dot{m}'' A_b}{V_c}
+      = \frac{\dot{m}'' A_i}{V_c}
       }
     \end{equation}
 
   \section{Gas Momentum Equation}
     Conservation of momentum on gray (gas) control volume (Vg) surround by boundary Ag
     \begin{equation*}
-        \frac{\partial}{\partial t}\int_{V_g} \rho \vec{u} \d V 
-      + \int_{A_g} \vec{u} (\rho \vec{u} \cdot \vec{n}) \d A 
+        \frac{\partial}{\partial t}\int_{V_g} \rho \vec{u} \d V_g
+      + \int_{A_g} \vec{u} (\rho \vec{u} \cdot \vec{n}) \d A_g
       + \vec{F}_p
-      = S(\vec{u})
+      = \int_{V_g} S_{\vec{u}} \d V_g
     \end{equation*}
     Using second-order approximations of the integrals and a first-order time derivative
     \begin{equation*}
         \frac{\rho \vec{u} V_g - \rho^0 \vec{u}^0 V_g^0}{\Delta t}
       + \sum_{f,g}\vec{u} (\rho \vec{u}\cdot\vec{A_{f,g}}) 
       + \vec{F}_p
-      = S(\vec{u})
+      = S_{\vec{u}} V_g
     \end{equation*}
     Translate this to the full cell
     \begin{equation*}
         V_c\frac{\rho \vec{u} \alpha_g - \rho^0 \vec{u}^0 \alpha_g^0}{\Delta t}
       + \sum_{f}\vec{u} (\rho \vec{u}\cdot\vec{A_{f}})\alpha_f 
       + \vec{F}_p \alpha_f
-      = S(\vec{u})
-      + \vec{u_b} \dot{m}'' A_b
+      = S(\vec{u}) \alpha_g V_c
+      + \vec{u_b} \dot{m}'' A_i
     \end{equation*}
     Divide by cell volume, $V_c$, to give the equation in OpenFOAM form that we want to solve
     \begin{equation}
@@ -73,18 +158,18 @@
         \frac{\rho \vec{u} \alpha_g - \rho^0 \vec{u}^0 \alpha_g^0}{\Delta t}
       + \frac{1}{V_c}\sum_{f} \vec{u} (\rho \vec{u}\cdot\vec{A_{f}})\alpha_f
       + \frac{\vec{F}_p \alpha_f}{V_c}
-      = \frac{S(\vec{u})}{V_c}
-      + \frac{\vec{u_b} \dot{m}'' A_b}{V_c}
+      = S_{\vec{u}} \alpha_g
+      + \frac{\vec{u_b} \dot{m}'' A_i}{V_c}
       }
     \end{equation}
 
   \section{Gas Energy Equation}
     Conservation of energy on the gray (gas) control volume surrounded by boundary Ag
     \begin{equation*}
-        \frac{\partial}{\partial t}\int_{V_g} \rho E \d V
-      + \int_{A_g} (E + \frac{p}{\rho}) (\rho \vec{u} \cdot \vec{n}) \d A
-      + \int_{A_g} (\vec{q} \cdot \vec{n}) \d A
-      = S(E)
+        \frac{\partial}{\partial t}\int_{V_g} \rho E \d V_g
+      + \int_{A_g} (E + \frac{p}{\rho}) (\rho \vec{u} \cdot \vec{n}) \d A_g
+      + \int_{A_g} (\vec{q} \cdot \vec{n}) \d A_g
+      = \int_{V_g} S_{E} \d V_g
     \end{equation*}
     The total energy of the fluid can be rewritten in terms of the specific enthalpy ($h_s$) such that
     \begin{align*}
@@ -95,10 +180,10 @@
     \end{align*}
     Substituting into the energy equation then yields
     \begin{equation*}
-          \frac{\partial}{\partial t}\int_{V_g} \rho (h_s + K - \frac{p}{\rho}) \d V
-        + \int_{A_g} (h_s + K) (\rho \vec{u} \cdot \vec{n}) \d A
-        + \int_{A_g} (\vec{q} \cdot \vec{n}) \d A
-        = S(E)
+          \frac{\partial}{\partial t}\int_{V_g} \rho (h_s + K - \frac{p}{\rho}) \d V_g
+        + \int_{A_g} (h_s + K) (\rho \vec{u} \cdot \vec{n}) \d A_g
+        + \int_{A_g} (\vec{q} \cdot \vec{n}) \d A_g
+        = \int_{V_g} S_{E} \d V_g
     \end{equation*}
     Using second-order approximations of the integrals and a first-order time derivative
     \begin{align*}
@@ -108,7 +193,7 @@
       + \sum_{f,g} K (\rho \vec{u}\cdot\vec{A}_{f,g}) \\
       + &\frac{p V_g - p^0 V_g^0}{\Delta t}
       + \sum_{f,g} (\vec{q}\cdot\vec{A}_{f,g}) \\
-      = & S(E)
+      = & S_E V_g
     \end{align*}
     Translate equation to full cell
     \begin{align*}
@@ -118,8 +203,8 @@
       + \sum_{f} K (\rho \vec{u}\cdot\vec{A}_{f}) \alpha_f \\
       + &V_c \frac{p \alpha_g - p^0 \alpha_g^0}{\Delta t}
       + \sum_{f} (\vec{q}\cdot\vec{A}_{f}) \alpha_f \\
-      = & S(E)
-      + K_b \dot{m}'' A_b
+      = & S_E \alpha_g V_c
+      + K_b \dot{m}'' A_i
       + \vec{q}_b \cdot \vec{A}_b
     \end{align*}
     Divide by cell volume, $V_c$, to give the equation in OpenFOAM form that we want to solve
@@ -130,33 +215,33 @@
       + \frac{1}{V_c}\sum_{f} K (\rho \vec{u}\cdot\vec{A}_{f}) \alpha_f \\
       + &\frac{p \alpha_g - p^0 \alpha_g^0}{\Delta t}
       + \frac{1}{V_c}\sum_{f} (\vec{q}\cdot\vec{A}_{f}) \alpha_f \notag\\
-      = & \frac{S(E)}{V_c}
-      + \frac{K_b \dot{m}'' A_b}{V_c}
+      = & S_E \alpha_g
+      + \frac{K_b \dot{m}'' A_i}{V_c}
       + \frac{\vec{q}_b \cdot \vec{A}_b}{V_c}\notag
     \end{empheq}
 
   \section{Gas Species Equation}
     Conservation of a given species mass fraction ($Y_i$) on gray (gas) control volume (Vg) surround by boundary Ag
     \begin{equation*}
-        \frac{\partial}{\partial t}\int_{V_g} \rho Y_i \d V 
-      + \int_{A_g} Y_i (\rho \vec{u} \cdot \vec{n}) \d A
-      + \int_{A_g} (\vec{G}_i \cdot \vec{n}) \d A
-      = S(Y_i)
+        \frac{\partial}{\partial t}\int_{V_g} \rho Y_i \d V_g
+      + \int_{A_g} Y_i (\rho \vec{u} \cdot \vec{n}) \d A_g
+      + \int_{A_g} (\vec{G}_i \cdot \vec{n}) \d A_g
+      = \int_{V_g} S_{Y_i} \d V_g
     \end{equation*}
     Using second-order approximations of the integrals and a first-order time derivative
     \begin{equation*}
         \frac{\rho Y_i V_g - \rho^0 Y_i^0 V_g^0}{\Delta t}
       + \sum_{f,g} Y_i (\rho \vec{u}\cdot\vec{A_{f,g}}) 
       + \sum_{f,g} (\vec{G}_i \cdot \vec{A_{f,g}})
-      = S(Y_i)
+      = S_{Y_i} V_g
     \end{equation*}
     Translate this to the full cell
     \begin{equation*}
         V_c\frac{\rho Y_i \alpha_g - \rho^0 Y_i^0 \alpha_g^0}{\Delta t}
       + \sum_{f} Y_i (\rho \vec{u}\cdot\vec{A_{f}})\alpha_f 
       + \sum_{f,g} (\vec{G}_i \cdot \vec{A_{f}})\alpha_f
-      = S(Y_i)
-      + Y_{i,b} \dot{m}'' A_b
+      = S_{Y_i} \alpha_g V_c
+      + Y_{i,b} \dot{m}'' A_i
     \end{equation*}
     Divide by cell volume, $V_c$, to give the equation in OpenFOAM form that we want to solve
     \begin{empheq}[box=\fbox]{align}
@@ -164,7 +249,68 @@
         &\frac{\rho Y_i \alpha_g - \rho^0 Y_i^0 \alpha_g^0}{\Delta t}
       + \frac{1}{V_c}\sum_{f} Y_i (\rho \vec{u}\cdot\vec{A_{f}})\alpha_f \\
       + &\frac{1}{V_c}\sum_{f,g} (\vec{G}_i \cdot \vec{A_{f}})\alpha_f 
-      = \frac{S(Y_i)}{V_c}
-      + \frac{Y_{i,b} \dot{m}'' A_b}{V_c} \notag
+      = S_{Y_i} \alpha_g
+      + \frac{Y_{i,b} \dot{m}'' A_i}{V_c} \notag
     \end{empheq}
+
+    \section{Cell Decomposition}
+    \label{sec:decomp}
+
+    \section*{Nomenclature}
+    \begin{multicols}{2}
+      \subsection*{Symbols}
+        \begin{tabbing}
+          XXX \= \kill
+          $A_i$ \> interface area \\
+          $A_s$ \> solid phase frequency factor \\
+          $c$ \>  specific heat capacity \\
+          $D$ \> species diffusivity \\
+          $E$ \> total energy \\
+          $E_s$ \> solid phase activation energy \\
+          $\vec{g}$ \> gravity vector \\
+          $h_s$ \> sensible enthalpy \\
+          $K$ \> kinetic energy \\
+          $k$ \> thermal conductivity \\
+          $L$ \> conduction length \\
+          $M$ \> molecular weight \\
+          $\dot{m}''$ \> mass flux \\
+          $p$ \> pressure \\
+          $\dot{Q}''$ \> heat flux \\
+          $\dot{Q_g}$ \> gas heat generation rate \\
+          $Q_s$ \> solid phase heat release \\
+          $R$ \> heat transfer resistance \\
+          $\bar{R}$ \> universal gas constant \\
+          $\dot{r}$ \> surface regression rate \\
+          $S$ \> volumetric source term \\
+          $T$ \> temperature \\
+          $t$ \> time \\
+          $\vec{u}$ \> velocity vector \\
+          $V$ \> volume \\
+          $Y$ \> specie mass fraction \\
+          $Y_b$ \> specie mass fraction from solid combustion
+        \end{tabbing}
+      \subsection*{Greek Symbols}
+        \begin{tabbing}
+          XXX \= \kill
+          $\alpha$ \> volume fraction \\
+          $\dot{\Omega}$ \> species generation rate\\
+          $\rho$ \> density
+        \end{tabbing}
+      \subsection*{Subscripts}
+        \begin{tabbing}
+          XXX \= \kill
+          $c$ \> cell \\
+          $f$ \> face \\
+          $g$ \> gas \\
+          $i$ \> interface \\
+          $j$ \> specie \\
+          $s$ \> solid \\
+          $t$ \> transferred
+        \end{tabbing}
+        \subsection*{Superscripts}
+        \begin{tabbing}
+          XXX \= \kill
+          $0$ \> initial time value
+        \end{tabbing}
+    \end{multicols}
 \end{document}
